# magnify-rs

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/algorithms/: eagle.rs  mod.rs  nearest_neighbor.rs  scale_nx.rs
